@@ -29,6 +29,9 @@ Bugs fixed
   now wrapped in `R_ToplevelExec()` to limit the propagation
   of R exceptions. This solved issue #710.
 
+- More complete and correct mapping of R class names in
+  :func:`rpy2.rinterface_lib.sexp.rclass_get`.
+
 
 Release 3.3.6
 =============
